2010-12-31 Jens Thoms Toerring    <jt@toerring.de>

	* lib/button.c: Fixed bug that made buttons on which the
	wrong mouse button was released, seem to have been released.

2010-12-29 Jens Thoms Toerring    <jt@toerring.de>

	* fdesign/fd_file.c: Changed the input function
	to accept .fd files so that for pseudo-objects of
	type FL_BEGIN_GROUP and FL_END_GROUP no more than
	a single line with the class name is required.

	* fdesign/fd_file.c, fd_main.h: Change of .fd file
	to avoid writing out useless informantion for
	FL_BEGIN_GROUP and FL_END_GROUP	and to have object
	type names start also with 'FL_'. "Magic" number of
	.fd file bumped up to 15000.

	* fd2ps/load.c: Changes to make fd2ps work with the new
	layout of the .fd files

	* fdesign/fd_attributes.c: Fixed a bug pointed out by
	LukenShiro that resulted in garbage appearing in an
	objects label with a shortcut when the type of the
	object got changed.

2010-12-20 Jens Thoms Toerring    <jt@toerring.de>

	* lib/part5_resources.texi: Wrong signature of
	fl_get_app_resources() as pointed out by LukenShiro
	corrected.

	* lib/xsupport.c: Strange returned string in (undocumented
	function) fl_vclass_name() on invalid argument changed to
	something hopefully more reasonable (bug found by
	LukenShiro)

	* lib/xdraw.c, doc/part5_drawing_obects.texi: As LukenShiro
	pointed out fl_dashedlinestyle() will fail with BadValue Xlib
	error when the first argument ontains '\0' characters. In that
	case no also the default dash pattern is set instead.

2010-12-18 Jens Thoms Toerring    <jt@toerring.de>

	* lib/include/tabfolder.h, doc/part3_container_objects.texi:
	Declaration of fl_get_tabfolder_offset() added and description
	of both fl_get_tabfolder_offset() and fl_set_tabfolder_offset()
	which as LukenShiro noted was missing./

	* doc/part5_useful_function.texi: Corrections to the
	descriptions of fl_iconify() and flwinresize() as
	proposed by LukeShiro.

2010-12-14 Jens Thoms Toerring    <jt@toerring.de>
