@@ -1,3 +1,8 @@
+2011-01-01 Jens Thoms Toerring    <jt@toerring.de>
+
+	* lib/include/Basic.h: Small change as proposed by
+	LukenShiro
+
 2010-12-31 Jens Thoms Toerring    <jt@toerring.de>
 
 	* lib/button.c: Fixed bug that made buttons on which the
